# creative-pipeline-automation

./: .env.example  .gitignore  DEVELOPMENT_LOG.md  GENERATION_GUIDE.md  LICENSE  RAILWAY_DEPLOYMENT.md  README.md  app.py  main.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  test_app.py  test_images.py
.claude/: settings.local.json
config/: audiences.yaml  regions.yaml
docs/: CAMPAIGN_CONFIG_GUIDE.md  DEVELOPMENT.md  DEVELOPMENT_LOG.md  FEATURES.md  MULTI_PRODUCT_GUIDE.md  PROJECT_STRUCTURE.md  TECHNICAL_REFERENCE.md  USER_GUIDE.md
examples/20251103_101407/: campaign_config.json
mcp/: campaign-monitoring-context.md  campaign-monitoring-mermaid.md
products/eco-cleaner/: config.yaml
products/eco-cleaner/photos/product/: simple-green-all-purpose-cleaners-2710001213033-64_1000.avif
products/gourmet-coffee/: ForeverRUN-NITRO™-Men's-Running-Shoes.avif  config.yaml
products/herbal-tea/: config.yaml
products/herbal-tea/photos/product/: Yogi-Tea-Elderberry-Lemon-Balm-Immune-Plus-Stress-Herbal-Tea-Bags-16-Count_70b64c85-22ba-4f39-ad2b-2beff05fc1ca.c6317c2ab5a5a747944c20ec9863169f.avif
products/noise-cancelling-headphones/: config.yaml
products/protein-bar/: config.yaml
products/running-shoes/: config.yaml
products/smart-watch/: config.yaml
products/sparkling-water/: config.yaml
products/travel-backpack/: config.yaml
products/travel-backpack/photos/product/: 154257-1041-EXPANSION-7.avif
products/yoga-mat/: config.yaml
src/: app.py
