[project]
name = "creative-automation-pipeline"
version = "0.1.0"
description = "AI-powered creative asset generation for social ad campaigns"
requires-python = ">=3.12,<3.14"
dependencies = [
    "deep-translator>=1.11.4",
    "google-genai>=1.46.0",
    "gradio>=5.49.1",
    "pillow>=11.3.0",
    "plotly>=6.3.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
]
